# NeuroNotes

./: .env.example  .gitignore  CHAT_API_GUIDE.md  CLAUDE.md  CONTEXT_EXPANSION_IMPLEMENTATION.md  FRONTEND_ARCHITECTURE.md  LATEX_FIX_IMPLEMENTATION.md  MATH_NOTATION_GUIDE.md  PDF_MATH_HANDLING.md  QUICKSTART.md  QUICK_START.md  RAG_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SCOPED_SEARCH_FEATURE.md  SCOPED_SEARCH_IMPLEMENTATION.md  STREAMLIT_GUIDE.md  YOUTUBE_COOKIES_SETUP.md  YOUTUBE_IMPORT_DEBUG.md  main.py  pyproject.toml  requirements.txt  run_dev.sh  run_streamlit.sh  test_chat.py  test_cookies.py  test_file_upload.py  test_large_document.py  test_ollama.py  test_rag.py  test_reranking.py  test_transcript_api.py  test_video_title.py  test_youtube_endpoint.py  test_youtube_url.py  youtube_cookies.txt
app/: dependencies.py  frontend.py  schemas.py
app/api/: ai_routes.py  chat_routes.py  notes_routes.py  study_routes.py
app/core/: config.py  interfaces.py
app/services/: ollama_service.py  rag_service.py  study_service.py
app/utils/: __init__.py  file_parser.py
frontend/: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Chat.css  Chat.jsx  NoteList.css  NoteList.jsx  NoteList.tsx
frontend/src/components/layout/: AppShell.jsx  ThemeToggle.jsx
frontend/src/components/ui/: button.jsx  sheet.jsx
frontend/src/components/views/: ChatView.jsx  FlashcardsView.jsx  LibraryView.jsx
frontend/src/services/: api.js  noteStore.js
frontend/src/types/: note.ts
frontend/src/utils/: fileReader.js
test_files/: README.md  sample_machine_learning.txt  sample_python_tips.md
tests/: test_context_expansion.py
